# OptionsAnalyzer

./: DOCUMENTATION.md  OptionsAnalyzer.py  README.md  launch.py  pyproject.toml  webapp.py
assets/: index.html  styles.css
data/cboe_symbols/: all_options_symbol.csv  all_options_symbol.json
data/imported/CBOE/MLTX/: MLTX_info.json
data/imported/CBOE/MLTX/2025-02-13/: 2025-02-13_close_UTC+01_00_MLTX.csv
data/imported/CBOE/MLTX/2025-02-14/: 2025-02-14_15_35_UTC+01_00_MLTX.csv
data/imported/CBOE/NDX/: NDX_info.json
data/imported/CBOE/NDX/2025-01-17/: 2025-01-17_19_52_UTC+01_00_NDX.csv
data/imported/CBOE/NDX/2025-02-03/: 2025-02-03_16_35_UTC+01_00_NDX.csv
data/imported/CBOE/NDX/2025-02-06/: 2025-02-06_close_UTC+01_00_NDX.csv
data/imported/CBOE/NDX/2025-02-12/: 2025-02-12_16_32_UTC+01_00_NDX.csv  2025-02-12_16_39_UTC+01_00_NDX.csv
data/imported/CBOE/NDX/2025-02-13/: 2025-02-13_close_UTC+01_00_NDX.csv
data/imported/CBOE/TSLA/: TSLA_info.json
src/analyzers/: analyzer_greeks.py  analyzer_iv.py  analyzer_monte_carlo.py  analyzer_oi.py  analyzer_payoff.py
src/config/: constant.py
src/gui/callbacks/: callBackImportData.py  callBackMarketMetrics.py  callBackPayoff.py  callBackSettings.py
src/gui/pages/: importData.py  marketMetrics.py  payoff.py  settings.py  sidebar.py
src/import_data/: import_data.py  utils.py
src/import_data/provider/barchart/: bar_chart.py
src/import_data/provider/cboe/: cboe_data.py
src/system/: file_paths.py  process_manager.py
user_config/: server_settings.json
(+16 files in other folders)
