[project]
name = "options-analyzer"
version = "1.1.0"
description = "Options Analyzer is a Python-based software application, designed to analyze the options market. It is aimed at teachers, enthusiasts and individuals wishing to learn about these markets."
authors = [
    {name = "AdRedrock"}
]
readme = "README.md"

requires-python = ">=3.10,<3.14"
dependencies = [
  "dash>=2.18.2",
  "dash_ag_grid>=31.3.0",
  "dask>=2025.1.0",
  "pyarrow>=19.0.0",
  "numpy>=2.2.2",
  "pandas>=2.2.3",
  "yfinance>=0.2.52",
  "scipy>=1.14.1",
  "PySide6>=6.8",
  "setproctitle",
  "dash-bootstrap-components (>=1.7.1,<2.0.0)"
]

[tool.poetry]
packages = [
  {include = "webapp.py"},
  {include = "*", from="src"}
  ]

[tool.poetry.scripts]
options-analyzer-gui = "OptionsAnalyzer:run"
options-analyzer-web = "webapp:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
